<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundpause">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_weight="0.5"
                android:layout_width="200sp"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center_horizontal"
                app:srcCompat="@drawable/jalat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:text="Game ended" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="horizontal"
                android:weightSum="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"/>

                <Button
                    android:id="@+id/buttonContinue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_horizontal"
                    android:onClick="playAgain"
                    android:background="@drawable/ylinnappi"
                    android:textColor="@color/buttonTextColor"
                    android:text="@string/buttonPlayAgain" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:orientation="horizontal"
                android:weightSum="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.375"/>

                <Button
                    android:id="@+id/buttonMainMenu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:background="@drawable/keskinappi"
                    android:textColor="@color/buttonTextColor"
                    android:onClick="goMainMenu"
                    android:text="@string/buttonMainmenu" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:orientation="horizontal"
                android:weightSum="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.375"/>

                <Button
                    android:id="@+id/buttonResetBall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.25"
                    android:background="@drawable/alinnappi"
                    android:textColor="@color/buttonTextColor"
                    android:text="@string/buttonResetBall" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>